# realsense

realsense_description/: CMakeLists.txt  package.xml
realsense_description/launch/: realsense_gazebo.launch  view_d415_model.launch  view_d415e_model.launch  view_d435_model.launch
realsense_description/meshes/collision/: d415_collision.stl  d435_collision.stl
realsense_description/meshes/visual/: FRAMOS_D415e_Camera.STL  d415.dae  framos_d415e_camera_mount_pleco.STL
realsense_description/rviz/: urdf.rviz
realsense_description/urdf/: _d415.gazebo.xacro  _d415.urdf.xacro  _d415e.urdf.xacro  _d435.gazebo.xacro  _d435.urdf.xacro  test_d415_camera.urdf.xacro  test_d415e_camera.urdf.xacro  test_d435_camera.urdf.xacro
